Calcs can be in detail or heading:attempt 2

--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
@@ -24,7 +24,7 @@
 #set($previousTable = "")
 #set($headingMap = {}) ## store heading level associated with each table
 #set($detailMap = {})  ## store tables that are for the detail section
-#set($detailCalculationsMap = {}) ## Calculations can either be heading or detail, separate the two types
+#set($headingCalcMap = {}) ## Record which heading (if any) each calc is in
 #set($sessionReport = $sessionData.getReport())##
 #set($sessionTable = $sessionReport.getParentTable())
 #foreach($reportField in $sessionReport.getReportFields())
@@ -32,7 +32,10 @@
   #set($table = $field.getTableContainingField())
   #if($field.isPrimaryKey())
     #if(!$detailStarted)
-      #if(!$table.equals($previousTable))
+      #if($reportField.getClass().getSimpleName() == "ReportCalcFieldDefn")
+        ## Calcs just go in the current heading
+        #set($success = $headingCalcMap.put($reportField, $headingLevel))
+      #elseif(!$table.equals($previousTable))
         #if($detailStartsNext)
           #set($detailStarted = true)
         #else
@@ -48,28 +51,14 @@
   #end
 #end
 #set($headingTables = $headingMap.keySet())
+#set($headingCalcs = $headingCalcMap.keySet())
 ## Any tables which aren't for the heading must be for the detail
-## Calculations are a but different as they can be calculated from data in various tables
-## They will belong to detail if they include at least one table that isn't in the heading
-#foreach($reportField in $sessionReport.getReportFields())
-  #if($reportField.getClass().getSimpleName() == "ReportCalcFieldDefn")
-    <p>Calculation found: $reportField = $reportField.getCalculationDefinition()<p>
-    #foreach($fieldUsed in $reportField.getFieldsUsed())
-      #set($table = $fieldUsed.getTableContainingField())
-      #if(!$headingTables.contains($table))
-        #set($success = $detailCalculationsMap.put($reportField, 1))
-        Calculation $reportField is for the detail because it references $table.$fieldUsed, not one of the heading tables $headingTables<br>
-        #break
-      #end
-    #end
-  #end
-#end
 #set($numDetailFields = 0)
 #foreach($reportField in $sessionReport.getReportFields())
   #set($table = $reportField.getBaseField().getTableContainingField())
   #if(!$headingTables.contains($table))
     #set($success = $detailMap.put($table, true))
-    #if(($reportField.getClass().getSimpleName() != "ReportCalcFieldDefn") || ($detailCalculationsMap.keySet().contains($reportField)))
+    #if(($reportField.getClass().getSimpleName() != "ReportCalcFieldDefn") || ($headingCalcs.contains($reportField)))
       #set($numDetailFields = $numDetailFields + 1)
     #end
   #end
@@ -111,7 +100,7 @@
               #set($field = $fields.get($testCellNumber).get(1))
               #if($field.getClass().getSimpleName() == "CalculationFieldDefn")
                 #set($reportCalcField = $field.getReportCalcField())
-                #if(!$detailCalculationsMap.keySet().contains($reportCalcField))
+                #if($headingCalcs.get($reportCalcField) == $headingLevel)
                   | $field = $testCell | &nbsp;&nbsp;&nbsp;&nbsp;
                 #end
               #elseif((!$field.isPrimaryKey()) && $field.getTableContainingField().equals($table))
@@ -137,7 +126,11 @@
     #foreach($cell in $thisValues)
       #set($cellNumber = $foreach.count - 1)
       #set($field = $fields.get($cellNumber).get(1))
-      #if(($detailTables.contains($field.getTableContainingField()) || ($detailCalculationsMap.keySet().contains($field.getReportCalcField()))) && (!$field.isPrimaryKey()))
+      #set($detailCalc = false)
+      #if($headingCalcs.contains($field.getReportCalcField()))
+        #set($detailCalc = true)
+      #end
+      #if(($detailTables.contains($field.getTableContainingField()) || ($detailCalc)) && (!$field.isPrimaryKey()))
         #set($rightAlign = false)
         #set($fieldCategory = $field.getFieldCategory().toString())
         #if(($fieldCategory == "NUMBER") || ($fieldCategory == "SEQUENCE"))
