Calcs can be in detail or heading:attempt 2 debug

--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
@@ -32,6 +32,7 @@
   #set($table = $field.getTableContainingField())
   #if($field.isPrimaryKey())
     #if(!$detailStarted)
+      <p>Testing report field $reportField.getClass().getSimpleName() which is a $reportField.getClass().getSimpleName()<p>
       #if($reportField.getClass().getSimpleName() == "ReportCalcFieldDefn")
         ## Calcs just go in the current heading
         #set($success = $headingCalcMap.put($reportField, $headingLevel))
