--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
@@ -104,7 +104,7 @@
               #if($field.getClass().getSimpleName() == "CalculationFieldDefn")
                 #set($reportCalcField = $field.getReportCalcField())
                 #if($headingCalcMap.get($reportCalcField) == $headingLevel)
-                  | $field = $testCell | &nbsp;&nbsp;&nbsp;&nbsp;
+                  <span style="float:right">&nbsp;&nbsp;&nbsp;&nbsp;$field = $testCell</span>
                 #end
               #elseif((!$field.isPrimaryKey()) && $field.getTableContainingField().equals($table))
                 $field: $testCell &nbsp;&nbsp;&nbsp;&nbsp;
