--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
@@ -113,6 +113,19 @@
           </td>
           <td class="trailing">&nbsp;</td>
         </tr>
+        <tr name="$thisUniqueId"
+          #if($row.size()>=6 && $row.get(5))
+            #foreach($expando in $row.get(5))
+              $expando.get(0)="$expando.get(1)"
+            #end
+          #end 
+          onclick="$row.get(1)" 
+          forcehighlight="true">
+          <td class="leading">&nbsp;</td>
+          #set($headingRow=true)
+          #parse("gui/pane2/sectioned_detail_row.vm")
+          <td class="trailing">&nbsp;</td>
+        </tr>
       #end
     #end
   #end
@@ -126,26 +139,8 @@
     onclick="$row.get(1)" 
     forcehighlight="true">
     <td class="leading">&nbsp;</td>
-    #foreach($cell in $thisValues)
-      #set($cellNumber = $foreach.count - 1)
-      #set($field = $fields.get($cellNumber).get(1))
-      #set($detailCalc = false)
-      #if($field.getClass().getSimpleName() == "CalculationFieldDefn")
-        #if(!$headingCalcs.contains($field.getReportCalcField()))
-          #set($detailCalc = true)
-        #end
-      #end
-      #if(($detailTables.contains($field.getTableContainingField()) || ($detailCalc)) && (!$field.isPrimaryKey()))
-        #set($rightAlign = false)
-        #set($fieldCategory = $field.getFieldCategory().toString())
-        #if(($fieldCategory == "NUMBER") || ($fieldCategory == "SEQUENCE"))
-          #set($rightAlign = true)
-        #end
-        #set($style="")
-        #if($rightAlign) #set($style = "$style text-align:right; ") #end
-        <td #if($style != "")style="$style"#end>$cell</td>
-      #end
-    #end
+    #set($headingRow=true)
+    #parse("gui/pane2/sectioned_detail_row.vm")
     <td class="trailing">&nbsp;</td>
   </tr>
 #end
