--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_detail_row.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_detail_row.vm
@@ -32,6 +32,6 @@
     #end
     #set($style="")
     #if($rightAlign) #set($style = "$style text-align:right; ") #end
-    <td #if($style != "")style="$style"#end>#if($headingRow) $field #else $cell #end</td>
+    <td #if($headingRow) class="rowb" #end #if($style != "")style="$style"#end>#if($headingRow) $field #else $cell #end</td>
   #end
 #end
