--- a/gtpb_clientside/WEB-INF/templates/gui/toolbar/buttons/filter.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/toolbar/buttons/filter.vm
@@ -56,7 +56,7 @@ function fFilters(){
 			$(oReportDoc).find("#fieldFilters").show();
 			$(oReportDoc).find("#reportData").addClass("lowered");
 			var aPostVars=new Array();  // send a post to the server to set the session variable for the filters on
-			aPostVars['return']='gui/development/blank';
+			aPostVars['return']='blank';
 			aPostVars['set_custom_string']='true';
 			aPostVars['stringkey']='filtering_on';
 			aPostVars['customstringvalue']='true';
