Test dummy filter boxes for sectioned report: styles

--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -218,10 +218,11 @@ table#reportData tr.excludedRecord td {
   border-bottom: 1px solid #cecece;
   font-size: 10pt;
   line-height: 2em;
+  margin-left: 0.2em
 }
 
 .sectioned_filter_row input {
-  width: 9em;
+  width: 8em;
 }
 
 .sectioned_filter_name {
