Test dummy filter boxes for sectioned report: styles

--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
@@ -60,7 +60,7 @@
 		margin-top: 30px;
 		}
 
-    #if($sessionReport.getReportStyle() == "SECTIONED")
+    #if($sessionReport.getReportStyle() != "SECTIONED")
 		div#wrapper table#reportData.lowered {
 		margin-top: 57px;
 		}
