Sectioned report: more rows by default

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_data.vm
@@ -55,6 +55,9 @@
 	#end##
   #end##
   #if($rowLimit)
+    #if($sessionReport.getReportStyle() == "SECTIONED")
+      #set($rowLimit = $rowLimit * 10)
+    #end
     #set($datarows = $view.getReportDataRows($sessionReport, $rowLimit))##
   #else
     #set($datarows = $view.getReportDataRows())##
