--- a/gtpb_clientside/resources/display_application.css
+++ b/gtpb_clientside/resources/display_application.css
@@ -196,3 +196,29 @@ div#_md_blank.window_disable h1 {
 	top: 700px;
 	position: absolute;
 }
+
+button.gtpb {
+  border:0;
+  width:68px; /* formerly 70px */
+  height:55px;
+  text-decoration:none;
+  text-align:center;
+  color:black;
+  font-size:8pt;
+  background-color:#f0f0f0;
+  text-shadow: 0px 1px 0px white;
+}
+  
+/* Toolbar buttons */
+
+button.gtpb img { border:0; }
+
+button.gtpb:hover { background:transparent url(button_bg_over.png) no-repeat center center }     
+button.gtpb:active { background-image:url(button_bg_down.png) }
+button.gtpb.selected { background:transparent url(button_bg_down.png) no-repeat center center }
+
+button.gtpb[disabled],
+button.gtpb[disabled]:hover,
+button.gtpb[disabled]:active,
+button.gtpb[disabled].selected { background:#f0f0f0; color:#aaaaaa }
+
