--- a/gtpb_clientside/resources/display_application.css
+++ b/gtpb_clientside/resources/display_application.css
@@ -213,9 +213,9 @@ button.gtpb {
 
 button.gtpb img { border:0; }
 
-button.gtpb:hover { background:transparent url(button_bg_over.png) no-repeat center center }     
-button.gtpb:active { background-image:url(button_bg_down.png) }
-button.gtpb.selected { background:transparent url(button_bg_down.png) no-repeat center center }
+button.gtpb:hover { background:transparent url('button/button_bg_over.png') no-repeat center center }     
+button.gtpb:active { background-image:url('button/button_bg_down.png') }
+button.gtpb.selected { background:transparent url('button/button_bg_down.png') no-repeat center center }
 
 button.gtpb[disabled],
 button.gtpb[disabled]:hover,
