--- a/gtpb_clientside/resources/button/button.css
+++ b/gtpb_clientside/resources/button/button.css
@@ -8,6 +8,7 @@ button.gtpb {
   font-size:8pt;
   background-color:#f0f0f0;
   text-shadow: 0px 1px 0px white;
+  float: left;
 }
 	 
 button.gtpb img { border:0; }
