--- a/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
@@ -162,10 +162,12 @@
 			          #parse('gui/toolbar/buttons/clone.vm')
 			          #parse('gui/toolbar/buttons/delete.vm')
 			        </div>
-			        <div class=buttonGroup> ## display preferences and filtering
+			        <div class=buttonGroup> ## display preferences
 			          #parse('gui/toolbar/buttons/pane1.vm')
 					      #parse('gui/toolbar/buttons/pane2.vm')
 			          #parse('gui/toolbar/buttons/pane3.vm')
+              </div>
+              <div class=buttonGroup> ## display preferences
                 #parse('gui/toolbar/buttons/filter.vm')
                 #parse('gui/toolbar/buttons/print.vm')
 			        </div>
