--- a/gtpb_clientside/resources/button/button.css
+++ b/gtpb_clientside/resources/button/button.css
@@ -8,7 +8,7 @@ button.gtpb {
   color:black;
   font-size:8pt;
   /* background-color:#f0f0f0; */
-  background: -moz-linear-gradient(top,  #fff,  #cecece);
+  /* background: -moz-linear-gradient(top,  #fff,  #cecece); */
   text-shadow: 0px 1px 0px white;
   float: left;
 }
