Debug sectioned report headings

--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_calcs.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_calcs.vm
@@ -67,3 +67,5 @@
   #end
 #end
 #set($detailTables = $detailMap.keySet())
+$viewTools.log("Heading tables $headingTables")
+$viewTools.log("Detail tables $detailTables")
