--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_head.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_head.vm
@@ -30,12 +30,16 @@
       #end
       #foreach($reportField in $sessionReport.getReportFields())
         #set($field = $reportField.getBaseField())
-        #set($table = $field.getTableContainingField())
         #if($reportField.getClass().getSimpleName() == "ReportCalcFieldDefn")
           #if($headingCalcMap.get($reportField) == $headingLevel)
             $field <input type="text" name="$field.getInternalFieldName()" /> &nbsp;&nbsp;&nbsp;
           #end
         #elseif(!$field.isPrimaryKey())
+          #if($reportField.isFieldFromReport())
+            #set($table = $reportField.getReportFieldIsFrom().getParentTable())
+          #else
+            #set($table = $field.getTableContainingField())
+          #end
           #if($table.equals($headingTable))
             $field <input type="text" name="$field.getInternalFieldName()" /> &nbsp;&nbsp;&nbsp;
           #end
@@ -47,12 +51,16 @@
     <span class="sectioned_filter_name">Detail:</span> 
     #foreach($reportField in $sessionReport.getReportFields())
       #set($field = $reportField.getBaseField())
-      #set($table = $field.getTableContainingField())
       #if($reportField.getClass().getSimpleName() == "ReportCalcFieldDefn")
         #if(!$headingCalcs.contains($reportField))
           $field <input type="text" name="$field.getInternalFieldName()" /> &nbsp;&nbsp;&nbsp;
         #end
       #elseif(!$field.isPrimaryKey())
+        #if($reportField.isFieldFromReport())
+          #set($table = $reportField.getReportFieldIsFrom().getParentTable())
+        #else
+          #set($table = $field.getTableContainingField())
+        #end
         #if(!$headingTables.contains($table))
           $field <input type="text" name="$field.getInternalFieldName()" /> &nbsp;&nbsp;&nbsp;
         #end
