Tweak logic for putting fields into heading sections: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_head.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_head.vm
@@ -37,6 +37,7 @@
         #elseif(!$field.isPrimaryKey())
           #if($reportField.isFieldFromReport())
             #set($table = $reportField.getReportFieldIsFrom().getParentTable())
+            Field $field is from a report based on table $table<br>
           #else
             #set($table = $field.getTableContainingField())
           #end
