Tweak logic for putting fields into heading sections: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_head.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_head.vm
@@ -40,6 +40,7 @@
             Field $field is from a report based on table $table<br>
           #else
             #set($table = $field.getTableContainingField())
+            Field $field is from table $table<br>
           #end
           #if($table.equals($headingTable))
             $field <input type="text" name="$field.getInternalFieldName()" /> &nbsp;&nbsp;&nbsp;
